--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,7 @@ jobs:
             lcov --directory . --capture --gcov-tool /usr/bin/gcov-8 --output-file coverage.info
             lcov --remove coverage.info '/usr/*' '*/tests/*' '*/external/*' --output-file coverage.info
             lcov --list coverage.info
-            grep SF coverage.info
-            bash <(curl -s https://codecov.io/bash) -v -x /usr/bin/gcov-8 -f coverage.info || echo "Codecov did not collect coverage reports"
+            bash <(curl -s https://codecov.io/bash) -x /usr/bin/gcov-8 || echo "Codecov did not collect coverage reports"
       - run: uname -a
 
   build_gcc_release:
