--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ include/inch/version.hpp
 **/.ccls-cache
 *.tmp
 
+# Qt Creator files
+CMakeLists.txt.user
+
 # Files created by the Makefile
 **/bin
 **/obj
