--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:eoan
     steps:
-      - run: apt update && apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - checkout
       - run:
           name: "Pull Submodules"
@@ -60,7 +60,7 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:eoan
     steps:
-      - run: apt update && apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
       - checkout
       - run:
           name: "Pull Submodules"
@@ -75,7 +75,7 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:eoan
     steps:
-      - run: apt update && apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
+      - run: sudo apt update && sudo apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
       - checkout
       - run:
           name: "Pull Submodules"
@@ -87,7 +87,7 @@ jobs:
       - run: cd ../Release-build && ctest -V
 
 workflows:
-  version: 2
+  version: 2.1
   build_and_test:
     jobs:
       - build_gcc_debug
