--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,9 @@ stages:
   - gcc-build
   - clang-build
 
-# Specify "eoan" rather than "latest"
+# Specify "rolling" rather than "latest"
 # We need gcc >=8 and clang >=7 for std::filesystem
-image: ubuntu:eoan
+image: ubuntu:rolling
 
 #Install the required packages to run the jobs of all stages
 before_script:
