--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Build
         run: cmake --build ../Build
       - name: Test
-        run: cd ../Build && ctest -V
+        run: cd ../Build && ctest -j2 -V
