Print cmake version at config time and remove duplicate linking
- The cmake sub-command JOIN arrived in 3.12, not sure what versions
the various CI providers are actually running so print it to find out.
- fmt and stdc++fs were added to project_options so no need to list
them again in target_link_libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 
 # CheckIPOSupported was introduced in 3.9
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
+message(STATUS "CMake version: ${CMAKE_VERSION}")
 
 # Put all binaries in a common location
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
