--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,20 +12,24 @@
       - data_files/*
       - docs/*
 
-# Generic commands for building and running the tests
+# Generic commands for building
 .build__template: &Build
   - cmake --build ./build
 
+# Generic commands for moving to the build directory and running tests
 .run_test_template: &RunTests
   - cd build
   - ctest -j2 -V
 
+# Which packages are required for GCC compilation
 .gcc_install_template: &GCCPackages
-  - apt -y install gcc g++ gcc-8 g++-8
+  - apt -y install gcc g++ gcc-$GCC_VERSION g++-$GCC_VERSION
 
+# Which pacakges are required for clang compilation
 .clang_install_template: &ClangPackages
   - apt -y install clang clang-8 libstdc++-8-dev
 
+# Configuration steps to inherit from
 .configure_template:
   stage: configure
   <<: *CI_Ignore
@@ -35,6 +39,7 @@
     paths:
       - build
 
+# Build steps to inherit from
 .build_template:
   stage: build
   <<: *CI_Ignore
@@ -44,35 +49,38 @@
     paths:
       - build
 
+# Test steps to inherit form
 .test_template:
   stage: test
   <<: *CI_Ignore
   tags:
     - linux
 
+# Specify "rolling" rather than "latest"
+# We need gcc >=8 and clang >=7 for std::filesystem
+image: ubuntu:rolling
+
+# List the stages to be run
 stages:
   - configure
   - build
   - test
 
-# Specify "rolling" rather than "latest"
-# We need gcc >=8 and clang >=7 for std::filesystem
-image: ubuntu:rolling
-
-# Install the required packages to run the jobs of all stages
+# Install common packages for all stages
 before_script:
   - apt update && apt -y install cmake ninja-build
 
 # Make sure the submodules are pulled in
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
+  GCC_VERSION: 8
 
 # GCC - Debug
 gcc-configure-Debug:
   extends: .configure_template
   script:
     - *GCCPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
+    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Debug
 
 gcc-build-Debug:
   extends: .build_template
@@ -95,7 +103,7 @@ gcc-configure-Release:
   extends: .configure_template
   script:
     - *GCCPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
+    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Release
 
 gcc-build-Release:
   extends: .build_template
